[gd_scene load_steps=21 format=2]

[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Test scene.tres" type="TileSet" id=2]
[ext_resource path="res://Sprites/Light.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ Fireball.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Prefabs/Cursor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Shoot.gd" type="Script" id=8]
[ext_resource path="res://Trash/Скороговорка про путина.wav" type="AudioStream" id=9]
[ext_resource path="res://Trash/Звонок в «Яблоко» - Путин тебя любит (www.hotplayer.ru).wav" type="AudioStream" id=10]
[ext_resource path="res://Trash/external-content.duckduckgo.com.jpg" type="Texture" id=11]
[ext_resource path="res://Trash/Голос - Путин 2000 год (www.hotplayer.ru).wav" type="AudioStream" id=12]
[ext_resource path="res://Trash/sobchak.png" type="Texture" id=13]
[ext_resource path="res://Trash/trash.gd" type="Script" id=14]

[sub_resource type="Animation" id=1]
resource_name = "Light"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 4.0, 5.0, 4.0, 5.0, 4.0, 5.0 ]
}

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="Animation" id=8]
resource_name = "Trash"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1250, -550 ), Vector2( 1250, -541.012 ), Vector2( 1250, -550 ) ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ -128.0 ]
}

[node name="Cursor" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -314, -33 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
z_index = -1
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
collision_layer = 66573
collision_mask = 66573
format = 1
tile_data = PoolIntArray( -4521967, 0, 0, -4521966, 0, 0, -4521965, 0, 0, -4521964, 0, 0, -4521963, 0, 0, -4521962, 0, 0, -4521961, 0, 0, -4521960, 0, 0, -4521959, 0, 0, -4521958, 0, 0, -4521957, 0, 0, -4521956, 0, 0, -4521955, 0, 0, -4521954, 0, 0, -4521953, 0, 0, -4521952, 0, 0, -4521951, 0, 0, -4521950, 0, 0, -4521949, 0, 0, -4521948, 0, 0, -4521947, 0, 0, -4521946, 0, 0, -4521945, 0, 0, -4521944, 0, 0, -4521943, 0, 0, -4521942, 0, 0, -4521941, 0, 0, -4521940, 0, 0, -4521939, 0, 0, -4521938, 0, 0, -4521937, 0, 0, -4521936, 0, 0, -4521935, 0, 0, -4521934, 0, 0, -4521933, 0, 0, -4521932, 0, 0, -4456432, -1073741824, 0, -4456395, 0, 0, -4456394, 0, 0, -4456393, 0, 0, -4456392, 0, 0, -4456391, 0, 0, -4456390, 0, 0, -4390896, -1073741824, 0, -4390853, 0, 0, -4390852, 0, 0, -4390851, 0, 0, -4390850, 0, 0, -4325360, -1073741824, 0, -4325313, 0, 0, -4325312, 0, 0, -4325311, 0, 0, -4325310, 0, 0, -4325309, 0, 0, -4325308, 0, 0, -4325307, 0, 0, -4325306, 0, 0, -4325305, 0, 0, -4325304, 0, 0, -4325303, 0, 0, -4325302, 0, 0, -4325301, 0, 0, -4325300, 0, 0, -4259824, -1073741824, 0, -4259763, -1073741824, 0, -4194288, -1073741824, 0, -4194227, -1073741824, 0, -4128752, -1073741824, 0, -4128691, -1073741824, 0, -4063216, -1073741824, 0, -4063155, -1073741824, 0, -3997680, -1073741824, 0, -3997619, -1073741824, 0, -3997608, 1610612736, 0, -3997607, 1610612736, 0, -3997606, 1610612736, 0, -3997605, 1610612736, 0, -3997604, 1610612736, 0, -3997603, 1610612736, 0, -3997602, 1610612736, 0, -3997601, 1610612736, 0, -3997600, 1610612736, 0, -3997599, 1610612736, 0, -3997598, 1610612736, 0, -3997597, 1610612736, 0, -3997596, 1610612736, 0, -3997595, 1610612736, 0, -3997594, 1610612736, 0, -3997593, 1610612736, 0, -3997592, 1610612736, 0, -3997591, 1610612736, 0, -3997590, 1610612736, 0, -3997589, 1610612736, 0, -3997588, 1610612736, 0, -3997587, 1610612736, 0, -3997586, 1610612736, 0, -3997585, 1610612736, 0, -3997584, 1610612736, 0, -3997583, 1610612736, 0, -3997582, 1610612736, 0, -3997581, 1610612736, 0, -3997580, 1610612736, 0, -3997579, 1610612736, 0, -3932144, -1073741824, 0, -3932083, -1073741824, 0, -3932073, -1610612736, 0, -3932042, -1073741824, 0, -3866608, -1073741824, 0, -3866547, -1073741824, 0, -3866537, -1610612736, 0, -3866506, -1073741824, 0, -3801072, -1073741824, 0, -3801011, -1073741824, 0, -3801001, -1610612736, 0, -3800970, -1073741824, 0, -3735536, -1073741824, 0, -3735475, -1073741824, 0, -3735465, -1610612736, 0, -3735434, -1073741824, 0, -3670000, -1073741824, 0, -3669983, 0, 0, -3669982, 0, 0, -3669981, 0, 0, -3669980, 0, 0, -3669979, 0, 0, -3669978, 0, 0, -3669977, 0, 0, -3669976, 0, 0, -3669975, 0, 0, -3669974, 0, 0, -3669973, 0, 0, -3669972, 0, 0, -3669971, 0, 0, -3669970, 0, 0, -3669969, 0, 0, -3669968, 0, 0, -3669967, 0, 0, -3669966, 0, 0, -3669965, 0, 0, -3669964, 0, 0, -3669939, -1073741824, 0, -3669929, -1610612736, 0, -3669898, -1073741824, 0, -3604464, -1073741824, 0, -3604447, -1610612736, 0, -3604427, 0, 0, -3604426, 0, 0, -3604425, 0, 0, -3604424, 0, 0, -3604423, 0, 0, -3604422, 0, 0, -3604403, -1073741824, 0, -3604393, -1610612736, 0, -3604362, -1073741824, 0, -3538928, -1073741824, 0, -3538911, -1610612736, 0, -3538885, 0, 0, -3538884, 0, 0, -3538883, 0, 0, -3538882, 0, 0, -3538867, -1073741824, 0, -3538857, -1610612736, 0, -3538826, -1073741824, 0, -3473392, -1073741824, 0, -3473375, -1610612736, 0, -3473345, 0, 0, -3473344, 0, 0, -3473343, 0, 0, -3473342, 0, 0, -3473331, -1073741824, 0, -3473321, -1610612736, 0, -3473290, -1073741824, 0, -3407856, -1073741824, 0, -3407839, -1610612736, 0, -3407806, -1610612736, 0, -3407795, -1073741824, 0, -3407785, -1610612736, 0, -3407754, -1073741824, 0, -3342320, -1073741824, 0, -3342303, -1610612736, 0, -3342270, -1610612736, 0, -3342259, -1073741824, 0, -3342249, -1610612736, 0, -3342218, -1073741824, 0, -3276784, -1073741824, 0, -3276767, -1610612736, 0, -3276734, -1610612736, 0, -3276723, -1073741824, 0, -3276713, -1610612736, 0, -3276682, -1073741824, 0, -3211248, -1073741824, 0, -3211231, -1610612736, 0, -3211198, -1610612736, 0, -3211187, -1073741824, 0, -3211177, -1610612736, 0, -3211146, -1073741824, 0, -3145712, -1073741824, 0, -3145695, -1610612736, 0, -3145662, -1610612736, 0, -3145651, -1073741824, 0, -3145640, 0, 0, -3145639, 0, 0, -3145638, 0, 0, -3145637, 0, 0, -3145636, 0, 0, -3145635, 0, 0, -3145634, 0, 0, -3145633, 0, 0, -3145632, 0, 0, -3145631, 0, 0, -3145630, 0, 0, -3145629, 0, 0, -3145628, 0, 0, -3145627, 0, 0, -3145626, 0, 0, -3145625, 0, 0, -3145624, 0, 0, -3145623, 0, 0, -3145622, 0, 0, -3145621, 0, 0, -3145620, 0, 0, -3145619, 0, 0, -3145610, -1073741824, 0, -3080176, -1073741824, 0, -3080159, -1610612736, 0, -3080126, -1610612736, 0, -3080115, -1073741824, 0, -3080083, -1610612736, 0, -3080074, -1073741824, 0, -3014640, -1073741824, 0, -3014623, -1610612736, 0, -3014590, -1610612736, 0, -3014579, -1073741824, 0, -3014547, -1610612736, 0, -3014538, -1073741824, 0, -2949104, -1073741824, 0, -2949087, -1610612736, 0, -2949054, -1610612736, 0, -2949043, -1073741824, 0, -2949011, -1610612736, 0, -2949002, -1073741824, 0, -2883568, -1073741824, 0, -2883551, -1610612736, 0, -2883518, -1610612736, 0, -2883507, -1073741824, 0, -2883475, -1610612736, 0, -2883466, -1073741824, 0, -2818032, -1073741824, 0, -2818015, -1610612736, 0, -2817982, -1610612736, 0, -2817971, -1073741824, 0, -2817939, -1610612736, 0, -2817930, -1073741824, 0, -2752496, -1073741824, 0, -2752479, -1610612736, 0, -2752446, -1610612736, 0, -2752434, 1610612736, 0, -2752433, 1610612736, 0, -2752432, 1610612736, 0, -2752431, 1610612736, 0, -2752430, 1610612736, 0, -2752429, 1610612736, 0, -2752428, 1610612736, 0, -2752427, 1610612736, 0, -2752426, 1610612736, 0, -2752425, 1610612736, 0, -2752424, 1610612736, 0, -2752423, 1610612736, 0, -2752422, 1610612736, 0, -2752421, 1610612736, 0, -2752420, 1610612736, 0, -2752419, 1610612736, 0, -2752418, 1610612736, 0, -2752417, 1610612736, 0, -2752416, 1610612736, 0, -2752415, 1610612736, 0, -2752414, 1610612736, 0, -2752413, 1610612736, 0, -2752412, 1610612736, 0, -2752411, 1610612736, 0, -2752410, 1610612736, 0, -2752409, 1610612736, 0, -2752408, 1610612736, 0, -2752407, 1610612736, 0, -2752406, 1610612736, 0, -2752405, 1610612736, 0, -2752404, 1610612736, 0, -2752394, -1073741824, 0, -2686960, -1073741824, 0, -2686943, -1610612736, 0, -2686910, -1610612736, 0, -2686858, -1073741824, 0, -2621424, -1073741824, 0, -2621407, -1610612736, 0, -2621374, -1610612736, 0, -2621322, -1073741824, 0, -2555888, -1073741824, 0, -2555871, -1610612736, 0, -2555838, -1610612736, 0, -2555786, -1073741824, 0, -2490352, -1073741824, 0, -2490335, -1610612736, 0, -2490302, -1610612736, 0, -2490250, -1073741824, 0, -2424816, -1073741824, 0, -2424799, -1610612736, 0, -2424766, -1610612736, 0, -2424714, -1073741824, 0, -2359280, -1073741824, 0, -2359263, -1610612736, 0, -2359230, -1610612736, 0, -2359178, -1073741824, 0, -2293744, -1073741824, 0, -2293727, -1610612736, 0, -2293694, -1610612736, 0, -2293642, -1073741824, 0, -2228208, -1073741824, 0, -2228191, -1610612736, 0, -2228158, -1610612736, 0, -2228106, -1073741824, 0, -2162672, -1073741824, 0, -2162655, -1610612736, 0, -2162622, -1610612736, 0, -2162570, -1073741824, 0, -2097136, -1073741824, 0, -2097119, -1610612736, 0, -2097086, -1610612736, 0, -2097034, -1073741824, 0, -2031600, -1073741824, 0, -2031583, -1610612736, 0, -2031550, -1610612736, 0, -2031539, 0, 0, -2031538, 0, 0, -2031537, 0, 0, -2031536, 0, 0, -2031535, 0, 0, -2031534, 0, 0, -2031533, 0, 0, -2031532, 0, 0, -2031531, 0, 0, -2031530, 0, 0, -2031529, 0, 0, -2031528, 0, 0, -2031527, 0, 0, -2031526, 0, 0, -2031525, 0, 0, -2031524, 0, 0, -2031523, 0, 0, -2031522, 0, 0, -2031521, 0, 0, -2031520, 0, 0, -2031519, 0, 0, -2031518, 0, 0, -2031517, 0, 0, -2031516, 0, 0, -2031515, 0, 0, -2031514, 0, 0, -2031513, 0, 0, -2031512, 0, 0, -2031511, 0, 0, -2031510, 0, 0, -2031509, 0, 0, -2031508, 0, 0, -2031507, 0, 0, -2031498, -1073741824, 0, -1966064, -1073741824, 0, -1966047, -1610612736, 0, -1966014, -1610612736, 0, -1966003, -1073741824, 0, -1965971, -1610612736, 0, -1965962, -1073741824, 0, -1900528, -1073741824, 0, -1900511, -1610612736, 0, -1900478, -1610612736, 0, -1900467, -1073741824, 0, -1900435, -1610612736, 0, -1900426, -1073741824, 0, -1834992, -1073741824, 0, -1834975, -1610612736, 0, -1834942, -1610612736, 0, -1834931, -1073741824, 0, -1834899, -1610612736, 0, -1834890, -1073741824, 0, -1769456, -1073741824, 0, -1769439, -1610612736, 0, -1769406, -1610612736, 0, -1769395, -1073741824, 0, -1769363, -1610612736, 0, -1769354, -1073741824, 0, -1703920, -1073741824, 0, -1703903, -1610612736, 0, -1703870, -1610612736, 0, -1703859, -1073741824, 0, -1703827, -1610612736, 0, -1703818, -1073741824, 0, -1638384, -1073741824, 0, -1638367, -1610612736, 0, -1638334, -1610612736, 0, -1638323, -1073741824, 0, -1638291, -1610612736, 0, -1638282, -1073741824, 0, -1572848, -1073741824, 0, -1572831, -1610612736, 0, -1572798, -1610612736, 0, -1572787, -1073741824, 0, -1572755, -1610612736, 0, -1572746, -1073741824, 0, -1507312, -1073741824, 0, -1507295, -1610612736, 0, -1507262, -1610612736, 0, -1507251, -1073741824, 0, -1507219, -1610612736, 0, -1507210, -1073741824, 0, -1441776, -1073741824, 0, -1441759, -1610612736, 0, -1441726, -1610612736, 0, -1441715, -1073741824, 0, -1441683, -1610612736, 0, -1441674, -1073741824, 0, -1376240, -1073741824, 0, -1376223, -1610612736, 0, -1376190, -1610612736, 0, -1376179, -1073741824, 0, -1376147, -1610612736, 0, -1376138, -1073741824, 0, -1310704, -1073741824, 0, -1310687, -1610612736, 0, -1310654, -1610612736, 0, -1310643, -1073741824, 0, -1310611, -1610612736, 0, -1310602, -1073741824, 0, -1245168, -1073741824, 0, -1245151, -1610612736, 0, -1245118, -1610612736, 0, -1245107, -1073741824, 0, -1245075, -1610612736, 0, -1245066, -1073741824, 0, -1179632, -1073741824, 0, -1179615, -1610612736, 0, -1179582, -1610612736, 0, -1179571, -1073741824, 0, -1179539, -1610612736, 0, -1179530, -1073741824, 0, -1114097, 1610612736, 0, -1114079, -1610612736, 0, -1114046, -1610612736, 0, -1114035, -1073741824, 0, -1114003, -1610612736, 0, -1113994, -1073741824, 0, -983050, 1610612736, 0, -983049, 1610612736, 0, -983048, 1610612736, 0, -983047, 1610612736, 0, -983046, 1610612736, 0, -983045, 1610612736, 0, -983044, 1610612736, 0, -983043, 1610612736, 0, -983042, 1610612736, 0, -983041, 1610612736, 0, -1048576, 1610612736, 0, -1048575, 1610612736, 0, -1048574, 1610612736, 0, -1048573, 1610612736, 0, -1048572, 1610612736, 0, -1048571, 1610612736, 0, -1048570, 1610612736, 0, -1048569, 1610612736, 0, -1048568, 1610612736, 0, -1048567, 1610612736, 0, -1048566, 1610612736, 0, -1048565, 1610612736, 0, -1048564, 1610612736, 0, -1048563, 1610612736, 0, -1048562, 1610612736, 0, -1048543, -1610612736, 0, -1048510, -1610612736, 0, -1048499, -1073741824, 0, -1048467, -1610612736, 0, -1048458, -1073741824, 0, -917515, -1610612736, 0, -983007, -1610612736, 0, -982974, -1610612736, 0, -982963, -1073741824, 0, -982931, -1610612736, 0, -982922, -1073741824, 0, -851979, -1610612736, 0, -917471, -1610612736, 0, -917438, -1610612736, 0, -917427, -1073741824, 0, -917395, -1610612736, 0, -917386, -1073741824, 0, -786443, -1610612736, 0, -851935, -1610612736, 0, -851902, -1610612736, 0, -851891, -1073741824, 0, -851859, -1610612736, 0, -851850, -1073741824, 0, -720907, -1610612736, 0, -786399, -1610612736, 0, -786366, -1610612736, 0, -786355, -1073741824, 0, -786323, -1610612736, 0, -786314, -1073741824, 0, -655371, -1610612736, 0, -720863, -1610612736, 0, -720830, -1610612736, 0, -720819, -1073741824, 0, -720787, -1610612736, 0, -720778, -1073741824, 0, -589835, -1610612736, 0, -655327, -1610612736, 0, -655294, -1610612736, 0, -655283, -1073741824, 0, -655251, -1610612736, 0, -655242, -1073741824, 0, -524313, 1610612736, 0, -524312, 1610612736, 0, -524311, 1610612736, 0, -524310, 1610612736, 0, -524309, 1610612736, 0, -524308, 1610612736, 0, -524307, 1610612736, 0, -524306, 1610612736, 0, -524305, 1610612736, 0, -524304, 1610612736, 0, -524303, 1610612736, 0, -524302, 1610612736, 0, -524301, 1610612736, 0, -524300, 1610612736, 0, -589790, 1610612736, 0, -589789, 1610612736, 0, -589788, 1610612736, 0, -589787, 1610612736, 0, -589786, 1610612736, 0, -589785, 1610612736, 0, -589784, 1610612736, 0, -589783, 1610612736, 0, -589782, 1610612736, 0, -589781, 1610612736, 0, -589780, 1610612736, 0, -589779, 1610612736, 0, -589778, 1610612736, 0, -589777, 1610612736, 0, -589776, 1610612736, 0, -589775, 1610612736, 0, -589774, 1610612736, 0, -589773, 1610612736, 0, -589772, 1610612736, 0, -589771, 1610612736, 0, -589770, 1610612736, 0, -589769, 1610612736, 0, -589768, 1610612736, 0, -589767, 1610612736, 0, -589766, 1610612736, 0, -589765, 1610612736, 0, -589764, 1610612736, 0, -589763, 1610612736, 0, -589762, 1610612736, 0, -589761, 1610612736, 0, -589760, 1610612736, 0, -589759, 1610612736, 0, -589746, 1610612736, 0, -589745, 1610612736, 0, -589744, 1610612736, 0, -589743, 1610612736, 0, -589742, 1610612736, 0, -589741, 1610612736, 0, -589740, 1610612736, 0, -589739, 1610612736, 0, -589738, 1610612736, 0, -589737, 1610612736, 0, -589736, 1610612736, 0, -589735, 1610612736, 0, -589734, 1610612736, 0, -589733, 1610612736, 0, -589732, 1610612736, 0, -589731, 1610612736, 0, -589715, -1610612736, 0, -589706, -1073741824, 0, -458778, -1610612736, 0, -524194, -1073741824, 0, -524179, -1610612736, 0, -524170, -1073741824, 0, -393242, -1610612736, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458747, 0, 0, -458744, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458658, -1073741824, 0, -458643, -1610612736, 0, -458634, -1073741824, 0, -327706, -1610612736, 0, -393122, -1073741824, 0, -393107, -1610612736, 0, -393098, -1073741824, 0, -262170, -1610612736, 0, -327586, -1073741824, 0, -327571, -1610612736, 0, -327562, -1073741824, 0, -196634, -1610612736, 0, -262049, 1610612736, 0, -262048, 1610612736, 0, -262047, 1610612736, 0, -262035, -1610612736, 0, -262026, -1073741824, 0, -131098, -1610612736, 0, -196510, 1610612736, 0, -196509, 1610612736, 0, -196508, 1610612736, 0, -196499, -1610612736, 0, -196490, -1073741824, 0, -65562, -1610612736, 0, -130971, 1610612736, 0, -130970, 1610612736, 0, -130969, 1610612736, 0, -130963, -1610612736, 0, -130954, -1073741824, 0, -26, -1610612736, 0, -65432, 1610612736, 0, -65431, 1610612736, 0, -65430, 1610612736, 0, -65427, -1610612736, 0, -65418, -1073741824, 0, 65511, 0, 0, 65512, 0, 0, 65513, 0, 0, 65514, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 0, 0, 56, 0, 0, 57, 0, 0, 58, 0, 0, 59, 0, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 66, 0, 0, 67, 0, 0, 68, 0, 0, 69, 0, 0, 70, 0, 0, 71, 0, 0, 72, 0, 0, 73, 0, 0, 74, 0, 0, 75, 0, 0, 76, 0, 0, 77, 0, 0, 78, 0, 0, 79, 0, 0, 80, 0, 0, 81, 0, 0, 82, 0, 0, 83, 0, 0, 107, 1610612736, 0, 108, 1610612736, 0, 118, -1073741824, 0, 65619, 0, 0, 65620, 0, 0, 65621, 0, 0, 65622, 0, 0, 65654, -1073741824, 0, 131158, 0, 0, 131159, 0, 0, 131160, 0, 0, 131161, 0, 0, 131190, -1073741824, 0, 196697, 0, 0, 196698, 0, 0, 196699, 0, 0, 196700, 0, 0, 196726, -1073741824, 0, 262236, 0, 0, 262237, 0, 0, 262238, 0, 0, 262239, 0, 0, 262262, -1073741824, 0, 327775, 0, 0, 327776, 0, 0, 327777, 0, 0, 327778, 0, 0, 327798, -1073741824, 0, 393314, 0, 0, 393315, 0, 0, 393316, 0, 0, 393317, 0, 0, 393334, -1073741824, 0, 458853, 0, 0, 458854, 0, 0, 458855, 0, 0, 458856, 0, 0, 458870, -1073741824, 0, 524392, 0, 0, 524393, 0, 0, 524394, 0, 0, 524395, 0, 0, 524406, -1073741824, 0, 589931, 0, 0, 589932, 0, 0, 589933, 0, 0, 589934, 0, 0, 589942, -1073741824, 0, 655470, 0, 0, 655471, 0, 0, 655472, 0, 0, 655473, 0, 0, 655478, -1073741824, 0, 721009, 0, 0, 721010, 0, 0, 721011, 0, 0, 721012, 0, 0, 721013, 0, 0 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 1851, 171 )
z_index = -1
texture = ExtResource( 3 )
texture_scale = 4.0
color = Color( 0.32549, 0.239216, 0.105882, 1 )
energy = 2.74
range_layer_min = -1
shadow_enabled = true
shadow_color = Color( 0.666667, 0.666667, 0.666667, 0 )
shadow_gradient_length = 1.0
shadow_filter = 3
shadow_filter_smooth = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Light2D"]
playback_speed = 0.6
anims/Light = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Light2D"]
rotation = 1.5708
z_index = -2
frames = SubResource( 4 )
animation = "Idle"
playing = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.129412, 0.0941176, 0.145098, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
scroll_offset = Vector2( 3, 0.5 )
scroll_base_offset = Vector2( 1, 0.5 )
scroll_limit_begin = Vector2( -10000, -10000 )
scroll_limit_end = Vector2( 100000, 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.1 )

[node name="external-contentduckduckgocom" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 229, -108 )
scale = Vector2( 0.592784, 0.592784 )
texture = ExtResource( 11 )

[node name="Enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( -106, -22 )

[node name="trash" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="sobchak" type="Sprite" parent="trash"]
modulate = Color( 0.611765, 1, 1, 0.576471 )
material = SubResource( 6 )
position = Vector2( 1422, -557 )
scale = Vector2( 0.180556, 0.180556 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="trash"]
material = SubResource( 7 )
margin_left = 1250.0
margin_top = -543.823
margin_right = 1330.0
margin_bottom = -512.823
text = "Modern art
perfomance"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="trash/Label"]
anims/Trash = SubResource( 8 )

[node name="putin1" type="AudioStreamPlayer2D" parent="trash"]
position = Vector2( 737, -955 )
stream = ExtResource( 12 )
volume_db = -0.718
autoplay = true
max_distance = 400.0

[node name="putin2" type="AudioStreamPlayer2D" parent="trash"]
position = Vector2( 1482, -555 )
stream = ExtResource( 9 )
autoplay = true
max_distance = 400.0

[node name="putin3" type="AudioStreamPlayer2D" parent="trash"]
position = Vector2( 1830, 96 )
stream = ExtResource( 10 )
autoplay = true
max_distance = 400.0
